sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: not found: value idx
			getValeur(idx:Int)
                                  ^